--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Almukarrom TGH.Gilang Pratama Ganja saputra S.Com M.com</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="max">
+        <div class="gambar1">
+            <img src="img/gbr1.png" alt="picture" width="250px">
+            <h1>PERSONAL</h1>
+            <br>
+            <HR color="6b8e23" width="200px"></HR>
+            <h2>CUSTOM DOMAINS</h2>
+            <HR color="6b8e23" width="200px"></HR>
+            <h2>SLEEP AFTER 30 MINUTER <BR>INACIVITY</BR></h2>
+            <HR color="6b8e23" width="200px"></HR>
+            <h3>FREE</h3>
+            <div class="link">
+	
+                <a href="">Sig Upp</a>
+                <div class="span"></div>  
+            </div>
+        </div>
+        <div class="gambar2">
+            <img src="img/gbr2.png" alt="picture" width="250px">
+            <h1>SMALL TIME</h1>
+            <br>
+            <HR color="6b8e23" width="200px"></HR>
+            <h2>NEVER SLEEP</h2>
+            <HR color="6b8e23" width="200px"></HR>
+            <h2>MULTIPLE WORKERS FORE MORE <BR>POWERFUL APPS</BR></h2>
+            <HR color="6b8e23" width="200px"></HR>
+            <h3>$150</h3>
+            <div class="link">
+	
+                <a href="">Free Trial</a>
+                <div class="span"></div>  
+            </div>
+        </div>
+        <div class="gambar3">
+            <img src="img/gbr3.png" alt="picture" width="250px">
+            <H1>INTERPRISE</H1>   
+            <br>
+            <HR color="6b8e23" width="200px"></HR>
+            <H2>DEICATED</H2>
+            <HR color="6b8e23" width="200px"></HR>
+            <h2>SIMPLE HORIZONTAL <BR>SCABILITY</BR></h2>
+            <HR color="6b8e23" width="200px"></HR>
+            <H3>$400</H3>
+            <div class="link">
+	
+                <a href="">Free Trial</a>
+                <div class="span"></div>  
+            </div>
+        </div>
+    </div>
+    
+</body>
+</html>
